--- a/now.json
+++ b/now.json
@@ -1,3 +1,10 @@
 {
-  "name": "online"
+  "version": 2,
+  "name": "nodejs-express",
+  "builds": [
+    {
+      "src": "**/*.js",
+      "use": "@now/node"
+    }
+  ]
 }
